[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "caseload"
version = "0.1.0"
description = "CVE tracker analytics for Jira projects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "CaseLoad Team"}
]
dependencies = [
    "Flask>=3.0.0",
    "Flask-SQLAlchemy>=3.1.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "networkx>=3.2.0",
    "jira>=3.5.0",
    "gunicorn>=21.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
caseload = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "analytics*", "data*"]
